# PyTerminal-Engine

./: .gitignore  README.md  colors.py  example.py  pyproject.toml  pyterminal.py  requirements.txt
.github/workflows/: pylint.yml
pyterminal/: __init__.py  colors.py  pyterminal.py
